--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler": "^9.0.0",
     "@angular/core": "^9.0.0",
     "@angular/forms": "^9.0.0",
+    "@angular/google-maps": "^9.0.0",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
@@ -53,6 +54,7 @@
     "mutationobserver-shim": "^0.3.3",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-charts": "^2.3.0",
+    "ngx-avatar": "^4.0.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-spinner": "^9.0.2",
